# mypyc-micropython

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  mkdocs.yml  partitions-default.csv  pyproject.toml  run_benchmarks.py  run_device_tests.py  run_lvgl_mvu_tests.py  run_lvgl_tests.py  run_nav_test.py  test_device.py  test_device_inventory.py  test_screen_navigation.py
.sisyphus/: boulder.json
benchmarks/: benchmark_device.py
blogs/: 01-list-and-forloop-support.md  02-dict-support.md  03-vtables-and-inheritance.md  04-ir-design.md  05-rtuple-and-list-optimization.md  06-ir-pipeline-refactoring.md  07-prelude-pattern.md  08-class-parameter-access.md  08-default-arguments.md  09-variadic-functions.md  10-type-coercion-fix.md  11-class-parameter-access.md  12-chained-attribute-access.md  13-string-operations.md  14-mypy-type-integration.md  15-mypy-type-extraction.md  16-exception-handling.md  17-list-comprehensions.md  18-super-calls.md  19-decorator-support.md  20-micropython-list-and-object-internals.md  21-pyi-stub-c-bindings.md  22-lvgl-display-driver-esp32.md  22-runtime-imports.md  23-emitter-rewrite-lvgl-on-device.md  23-private-final-optimization.md  24-cross-module-clib-calls.md  24-special-methods.md  25-compiled-classes-vs-micropython.md  25-generator-support.md  26-runtime-imports.md  27-private-final-optimization.md  28-special-methods.md  29-generator-support.md  30-identity-comparison-method-dispatch.md  31-lvgl-navigation-mvu-architecture.md  32-trait-system.md  33-async-await-support.md  34-intra-package-sibling-imports.md  (+15 more)
(+288 files in other folders)
