[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mypyc-micropython"
version = "0.1.0"
description = "Compile typed Python to MicroPython native modules using mypyc's IR"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "mypyc-micropython contributors" }
]
keywords = ["micropython", "mypyc", "compiler", "native", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "mypy[mypyc]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mpy-compile = "mypyc_micropython.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mypyc_micropython"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "c_runtime: tests that compile generated C and execute it with the mock runtime",
]
